fixed header z-index

--- a/src/components/data/header/Header.module.css
+++ b/src/components/data/header/Header.module.css
@@ -7,6 +7,7 @@
 }
 
 .radius {
+  background-color: #ffff;
   box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.5);
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
