--- a/src/components/layout/PageWrapper.module.css
+++ b/src/components/layout/PageWrapper.module.css
@@ -1,6 +1,4 @@
 .container {
   width: 100%;
   margin-top: 2rem;
-
-  z-index: 0;
 }
